--- a/B2BApp.Web/Views/Satis/Index.cshtml
+++ b/B2BApp.Web/Views/Satis/Index.cshtml
@@ -2,11 +2,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Firmalar</h2>
+<h2>Satislar</h2>
 <hr />
 
 <div class="" style="display: flex;justify-content: flex-end;">
-    <button class="btn btn-success" onclick="Save()"><i class="bi bi-plus"></i> Yeni Firma</button>
+    <button class="btn btn-success" onclick="Save()"><i class="bi bi-plus"></i> Yeni Satis</button>
 
 </div>
 <br />
@@ -16,13 +16,21 @@
 <table id="myTable" class="display" style="width:100%">
     <thead>
         <tr>
-            <th>Firma Adi</th>
+            <th>Şube Adi</th>
+            <th>Ürün Adi</th>
+            <th>Satış Miktarı</th>
+            <th>Satış Tarihi</th>
+            <th>Toplam</th>
             <th></th>
         </tr>
     </thead>
     <tfoot>
         <tr>
-            <th>Firma Adi</th>
+            <th>Şube Adi</th>
+            <th>Ürün Adi</th>
+            <th>Satış Miktarı</th>
+            <th>Satış Tarihi</th>
+            <th>Toplam</th>
             <th></th>
         </tr>
     </tfoot>
@@ -36,13 +44,17 @@
 <script type="text/javascript">
     $(document).ready(function () {
         new DataTable('#myTable', {
-            language: {
+            "language": {
                 url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
             },
-            "ajax": '/fakeData/firmalar.json',
+            "ajax": '/fakeData/satis.json',
 
             "columns": [
-                { "data": 'firma_adi' },
+                { "data": 'subeAdi' },
+                { "data": 'urunAdi' },
+                { "data": 'satisMiktari' },
+                { "data": 'satisTarihi' },
+                { "data": 'toplamFiyati' },
                 {
                     "data": "id", "render": function (data) {
                         return `
@@ -76,13 +88,13 @@
                     success: function (data) {
                         if (data.success) {
                             Swal.fire({
-                                title: "Firma Silindi",
+                                title: "Satis Silindi",
                                 icon: "success"
                             });
                         }
                         else {
                             Swal.fire({
-                                title: "Firma Silinirken Bir Sorun Oluştu",
+                                title: "Satis Silinirken Bir Sorun Oluştu",
                                 icon: "error"
                             });
                         }
@@ -92,5 +104,5 @@
         })
     }
 
-    
+   
 </script>
