--- a/B2BApp.Web/Views/Kategori/Index.cshtml
+++ b/B2BApp.Web/Views/Kategori/Index.cshtml
@@ -36,20 +36,28 @@
 <script type="text/javascript">
     $(document).ready(function () {
         new DataTable('#myTable', {
-            "ajax": '/fakeData/kategoriler.json',
+            "ajax":
+            {
+                "url": "https://localhost/api/kategori/all"
+            },
             
             "columns": [
-                { "data": 'kategori_adi'},
+                { "data": 'kategoriAdi'},
                 {
-                    "data": "id", "render": function (data) {
-                        return `
+                    "data": "id", 
+                    "render": function (data) {
+                        console.log(data);
+                           
+
+                        return 
+                        `
                             <div class="w-75 btn-group" role="group">
-                                <a onClick=Save('/Admin/Product/Upsert?id=${data}')
-                                    class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
-                                <a onClick=Delete('/Admin/Product/Delete/${data}')
-                                    class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
-                            </div>`
-                    }, "width": "25%"
+                                <a onClick='/Admin/Product/Upsert?id=${data}' class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
+                                <a onClick=Delete('/kategori/delete?id=${data}') class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>    
+                            </div>
+                         `
+                    }, 
+                    "width": "25%"
                 },
             ]
         });
@@ -57,31 +65,33 @@
 
     function Delete(url) {
         Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
+            title: 'Emin Misiniz?',
+            text: "Silindikten Sonra Geri Alamazsınız!",
             icon: 'warning',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
+            cancelButtonText: "Geri",
+            confirmButtonText: 'Evet Sil'
         }).then((result) => {
             if (result.isConfirmed) {
                 $.ajax({
                     url: url,
                     type: 'DELETE',
                     success: function (data) {
-                        if (data.success) {
-                            Swal.fire({
-                                title: "Kategori Silindi",
-                                icon: "success"
-                            });
-                        }
-                        else {
-                            Swal.fire({
-                                title: "Kategori Silinirken Bir Sorun Oluştu",
-                                icon: "error"
-                            });
-                        }
+                        console.log(data);
+                        // if (data.success) {
+                        //     Swal.fire({
+                        //         title: "Kategori Silindi",
+                        //         icon: "success"
+                        //     });
+                        // }
+                        // else {
+                        //     Swal.fire({
+                        //         title: "Kategori Silinirken Bir Sorun Oluştu",
+                        //         icon: "error"
+                        //     });
+                        // }
                     }
                 })
             }
@@ -104,10 +114,33 @@
             }
         }).then((result) =>{
             if (result.isConfirmed) {
-                Swal.fire({
-                    title: "Kategori Eklendi",
-                    icon: "success"
+                $.ajax({
+                    url: 'https://localhost/api/Kategori',
+                    crossDomain: true,
+                    method: 'post',
+                    headers: {
+                        'accept': 'text/plain'
+                    },
+                    contentType: 'application/json',
+                    // data: '{"kategoriAdi": "Kategori-12"\n}',
+                    data: JSON.stringify({
+                        'kategoriAdi': result.value
+                    })
+                    
+                }).done(function (response) {
+                    if (response !=null) {
+                        Swal.fire({
+                            title: "Kategori Eklendi",
+                            icon: "success"
+                        });
+                    }
                 });
+
+
+
+
+
+                
             }
         })
     }
