--- a/B2BApp.Web/Views/Kategori/Index.cshtml
+++ b/B2BApp.Web/Views/Kategori/Index.cshtml
@@ -47,6 +47,7 @@
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="dismissBUton"></button>
     </div>
     <div class="offcanvas-body">
+        @* kategori hidden id *@
         <label type="text" id="kategoriId" value="" hidden></label> 
 
         <br />
