--- a/B2BApp.Web/Views/Urun/Index.cshtml
+++ b/B2BApp.Web/Views/Urun/Index.cshtml
@@ -1,99 +1,336 @@
 ﻿@{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
 
-<h2>Urunler</h2>
-<hr />
+<div class="container">
 
-<div class="" style="display: flex;justify-content: flex-end;">
-    <button class="btn btn-success" onclick="Save()"><i class="bi bi-plus"></i> Yeni Urun</button>
+    <h2>Urunler</h2>
+    <hr />
+
+    <div class="" style="display: flex;justify-content: flex-end;">
+        <button class="btn btn-success" onclick="Save()"><i class="bi bi-plus"></i> Yeni Urun</button>
+
+    </div>
+    <br />
+
+
+    <table id="urunTable" class="display" style="width:100%">
+        <thead>
+            <tr>
+                <th>Urun</th>
+                <th>Fiyat</th>
+                <th>Kategori</th>
+                <th></th>
+            </tr>
+        </thead>
+    </table>
+
+
 
 </div>
-<br />
+
+@* right drawer *@
+
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" >
+    <div class="offcanvas-header">
+        <h5 id="offcanvasRightLabel">Urun Güncelle</h5>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="dismissBUton"></button>
+    </div>
+    <div class="offcanvas-body">
+        <label type="text" id="urunId" value="" hidden></label>
+
+        <br />
+        <div class="form-group">
+        <label for="urunIsim" class="form-label">Urun</label>
+        <input type="text" id="urunIsim" class="form-control" value="" >
+        </div>
+        <div class="form-group">
+            <label for="urunFiyat" class="form-label">Urun</label>
+            <input type="text" id="urunFiyat" class="form-control" value="">
+        </div>
 
 
+        <label for="categorySelectDrawer" class="form-label">Kategori</label> <select id="categorySelectDrawer" class="select2" placeholder='select item'></select>
 
-<table id="myTable" class="display" style="width:100%">
-    <thead>
-        <tr>
-            <th>Urun</th>
-            <th>Kategori</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tfoot>
-        <tr>
-            <th>Urun</th>
-            <th>Kategori</th>
-            <th></th>
-        </tr>
-    </tfoot>
-</table>
+
+        <br />
+        <div style="display: flex;justify-content: flex-end;">
+            <button onclick=updateUrun() class="btn btn-secondary">Güncelle</button>
+        </div>
+    </div>
+</div>
+
+
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.datatables.net/2.0.8/js/dataTables.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css" />
+@* select2 kullanımı *@
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js" defer></script>
+
+
+
 <script type="text/javascript">
-    $(document).ready(function () {
-        new DataTable('#myTable', {
-            language: {
-                url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
+    let table;
+
+
+    //datatable
+    $(document).ready(function loadTable() {
+        
+
+
+
+        table = $('#urunTable').DataTable({
+            "ajax":
+            {
+                "url": "https://localhost/api/Urun/GetUrunlerWithKategori"
             },
-            "ajax": '/fakeData/urunler.json',
 
             "columns": [
-                { "data": 'urun_adi' },
-                { "data": 'kategori_adi' },
-                {
-                    "data": "id", "render": function (data) {
-                        return `
-                                <div class="w-75 btn-group" role="group">
-                                    <a onClick=Save('/Admin/Product/Upsert?id=${data}')
-                                        class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
-                                    <a onClick=Delete('/Admin/Product/Delete/${data}')
-                                        class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
-                                </div>`
-                    }, "width": "25%"
-                },
-            ],
+                { "data": 'urunAdi' },
+                { "data": 'fiyat' },
+                { "data": 'kategori.kategoriAdi' },
 
+                {
+                    "data": "id",
+                    "render": function (data) {
+                        return `
+                                          <div class="w-75 btn-group" role="group">
+                                                  <a onClick=getUrunInfo("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i>Edit</a>
+                                              <a onClick=Delete("${data}") class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
+                                          </div>`
+                    },
+                    "width": "20%"
+                },
+            ]
         });
     });
 
-    function Delete(url) {
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                $.ajax({
-                    url: url,
-                    type: 'DELETE',
-                    success: function (data) {
-                        if (data.success) {
-                            Swal.fire({
-                                title: "Urun Silindi",
-                                icon: "success"
-                            });
-                        }
-                        else {
-                            Swal.fire({
-                                title: "Urun Silinirken Bir Sorun Oluştu",
-                                icon: "error"
-                            });
-                        }
-                    }
-                })
+
+    function getUrunInfo(data) {
+        getCategoriesUpdate();
+
+
+        $.ajax({
+            url: 'https://localhost/api/Urun/GetUrunWithKategori',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain'
+            },
+            data: {
+                'id': data
+            }
+        }).done(function (response) {
+            if (response != null) {
+                // getirilen verilerin gerekli yerlere atanması
+                $("#urunIsim").val(response.data.urunAdi);
+                $("#categorySelectDrawer").val(response.data.kategori.id).trigger('change');
+                $("#urunId").val(response.data.id);
+                $("#urunFiyat").val(response.data.fiyat);
+                    
+
             }
         })
     }
 
-    
+    function updateUrun() {
+        let yeniUrunAdi = $("#urunIsim").val();
+        let yeniUrunFiyat = $("#urunFiyat").val();
+        let yeniKategoriId = $("#categorySelectDrawer").val();
+        let id = $("#urunId").val();
+        debugger;
+
+        $.ajax({
+            url: 'https://localhost/api/Urun?urunId=' + id,
+            crossDomain: true,
+            method: 'put',
+            headers: {
+                'accept': 'text/plain'
+            },
+            contentType: 'application/json',
+            data: JSON.stringify({
+                'id': id,
+                'kategoriId': yeniKategoriId,
+                'urunAdi': yeniUrunAdi,
+                'fiyat': yeniUrunFiyat
+            })
+        }).done(function (response) {
+
+            $("#dismissBUton").click()
+            //Reload/redraw the table with new data
+            table.ajax.reload();
+
+            Swal.fire({
+                title: "Urun Güncellendi",
+                icon: "success"
+            });
+
+
+        });
+    }
+
+    function Delete(data) {
+        Swal.fire({
+            title: 'Emin Misiniz?',
+            text: "Silindikten Sonra Geri Alamazsınız!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            cancelButtonText: "Geri",
+            confirmButtonText: 'Evet Sil'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                console.log(data);
+
+                $.ajax({
+                    url: 'https://localhost/api/Urun?id=' + data,
+                    crossDomain: true,
+                    method: 'delete',
+                    headers: {
+                        'accept': 'text/plain'
+                    }
+                }).done(function (response) {
+                    console.log(response);
+                    if (response != null || data != null) {
+
+                        table.ajax.reload();
+
+                        Swal.fire({
+                            title: "Urun Silindi",
+                            icon: "success"
+                        });
+                    }
+                    else {
+                        Swal.fire({
+                            title: "Urun Silinirken Bir Sorun Oluştu",
+                            icon: "error"
+                        });
+                    }
+                });
+            }
+        })
+    }
+
+    function Save() {
+
+        swal.fire({
+            title: 'Uun Ekle',
+            html:
+                `<label for="urunIsimEkle" class="form-label">Urun</label> <input type="text" id="urunIsimEkle" class= "form-control" value="" required>
+                 <label for= "urunFiyatEkle" class= "form-label">Fiyat</label> <input type="number" id = "urunFiyatEkle" class= "form-control" value = "" required>                <br/>
+                 <label for="categorySelectSave" class= "form-label">Kategori</label> <select id="categorySelectSave" class="select2" placeholder='select item'></select>
+                    `,
+            preConfirm: function () {
+                return new Promise(function (resolve) {
+
+                    resolve([
+                        $('#urunIsimEkle').val(),
+                        $('#categorySelectSave').val(),
+                            $('#urunFiyatEkle').val()
+                    ])
+                })
+            },
+            onOpen: function () {
+                $('#swal-input1').focus()
+            },
+            didOpen: getCategories(),
+        }).then((result) => {
+            console.log(result);
+
+            if (result.isConfirmed) {
+                console.log($('#categorySelectSave').val());
+                $.ajax({
+                    url: 'https://localhost/api/Urun',
+                    crossDomain: true,
+                    method: 'post',
+                    headers: {
+                        'accept': 'text/plain'
+                    },
+                    contentType: 'application/json',
+                    // data: '{\n  "id": "",\n  "urunAdi": "Urun-1",\n  "urunTel": "5312854868"\n}',
+                    data: JSON.stringify({
+                        'id': '',
+                        'urunAdi': $('#urunIsimEkle').val(),
+                        'kategoriId': $('#categorySelectSave').val(),
+                        'fiyat': $('#urunFiyatEkle').val(),
+                    })
+                }).done(function (response) {
+                    if (response != null) {
+                        //Reload/redraw the table with new data
+                        table.ajax.reload();
+
+                        //table = loadTable(); // Yeni tablo oluştur
+                        Swal.fire({
+                            title: "Urun Eklendi",
+                            icon: "success"
+                        });
+                    }
+                });
+
+            }
+        });
+    }
+
+    function getCategories(){
+        // categorySelectSave
+        $.ajax({
+            url: 'https://localhost/api/Kategori/all',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain'
+            }
+        }).done(function (response) {
+            result = $.map(response.data, function (data) {
+                return {
+                    id: data.id,
+                    text: data.kategoriAdi
+                };
+            });
+            console.log(result);
+            $("#categorySelectSave").select2({
+                placeholder: "Choose a person attending todays meeting",
+                data: result,
+                dropdownParent: $('.swal2-container'), // dropdownParent olarak SweetAlert2 konteynerini belirtin
+                width: 200,
+
+            });
+        });
+    }
+      
+    function getCategoriesUpdate(){
+        // categorySelectSave
+        $.ajax({
+            url: 'https://localhost/api/Kategori/all',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain'
+            }
+        }).done(function (response) {
+            result = $.map(response.data, function (data) {
+                console.log()
+                return {
+                    id: data.id,
+                    text: data.kategoriAdi
+                };
+            });
+            console.log(result);
+            $("#categorySelectDrawer").select2({
+                placeholder: "Choose a person attending todays meeting",
+                data: result,
+                
+                width: 200,
+
+            });
+        });
+    }
+
+
+
+
+
 </script>
