--- a/B2BApp.Web/Views/Urun/Index.cshtml
+++ b/B2BApp.Web/Views/Urun/Index.cshtml
@@ -81,10 +81,10 @@
     //datatable
     $(document).ready(function loadTable() {
         
-
-
-
         table = $('#urunTable').DataTable({
+            "language": {
+                url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
+            },
             "ajax":
             {
                 "url": "https://localhost/api/Urun/GetUrunlerWithKategori"
