--- a/B2BApp.Web/Views/Sube/Index.cshtml
+++ b/B2BApp.Web/Views/Sube/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+
 }
 
 <h2>Satislar</h2>
@@ -12,12 +14,14 @@
 <br />
 
 
-
+<div class="container">
 <table id="myTable" class="display" style="width:100%">
     <thead>
         <tr>
-            <th>Firma Adi</th>
             <th>Şube Adi</th>
+            <th>Firma Adi</th>
+            <th>Telefon</th>
+           
             
             <th></th>
         </tr>
@@ -30,7 +34,7 @@
         </tr>
     </tfoot>
 </table>
-
+</div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.datatables.net/2.0.8/js/dataTables.js"></script>
@@ -42,20 +46,20 @@
             "language": {
                 url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
             },
+           
             "ajax": '/fakeData/subeler.json',
 
             "columns": [
                 { "data": 'firma_adi' },
+                { "data": 'sube_adi' },
                 { "data": 'sube_adi' },
                 
                 {
                     "data": "id", "render": function (data) {
                         return `
                                 <div class="w-75 btn-group" role="group">
-                                    <a onClick=Save('/Admin/Product/Upsert?id=${data}')
-                                        class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
-                                    <a onClick=Delete('/Admin/Product/Delete/${data}')
-                                        class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
+                                    <a onClick=getUrunInfo("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i>Edit</a>
+                                    <a onClick=Delete("${data}") class="btn btn-danger mx-2">Delete</a>
                                 </div>`
                     }, "width": "25%"
                 },
@@ -64,38 +68,7 @@
         });
     });
 
-    function Delete(url) {
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                $.ajax({
-                    url: url,
-                    type: 'DELETE',
-                    success: function (data) {
-                        if (data.success) {
-                            Swal.fire({
-                                title: "Satis Silindi",
-                                icon: "success"
-                            });
-                        }
-                        else {
-                            Swal.fire({
-                                title: "Satis Silinirken Bir Sorun Oluştu",
-                                icon: "error"
-                            });
-                        }
-                    }
-                })
-            }
-        })
-    }
+  
 
    
 </script>
